2006-04-12  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* fns.c [HAVE_MENUS && MAC_OS]: Include macterm.h.

	* image.c [MAC_OS] (xpm_load_image): Add parentheses around
	assignment used as truth value.  Add explicit braces to avoid
	ambiguous `else'.
	[MAC_OS] (gif_load): Remove unused variable `gcpro1'.

	* lisp.h (syms_of_fontset, Fset_fontset_font): Put extern and
	EXFUN in #ifdef HAVE_WINDOW_SYSTEM.
	(syms_of_xfns, syms_of_xsmfns, syms_of_xselect, syms_of_xterm):
	Put externs in #ifdef HAVE_X_WINDOWS.
	(syms_of_macfns, syms_of_macselect, syms_of_macterm)
	(syms_of_macmenu, syms_of_mac) [MAC_OS]: Add externs.
	(init_mac_osx_environment) [MAC_OSX]: Add extern.

	* mac.c (init_process): Remove undef.
	(select) [MAC_OSX]: Undefine before including sysselect.h.
	(posix_pathname_to_fsspec, fsspec_to_posix_pathname) [MAC_OSX]:
	Remove functions and prototypes.
	(parse_value): Add parentheses around + inside shift.
	(path_from_vol_dir_name): Make static.
	(get_temp_dir_name): Remove unused variables `cpb' and `dir_name'.
	[!MAC_OSX] (get_path_to_system_folder): Likewise.
	(Fmac_get_file_creator, Fmac_get_file_type): Remove unused
	variable `cCode'.
	(Fmac_coerce_ae_data): Remove unused variables `fref' and `fs'.
	(Fmac_get_preference): Add explicit braces to avoid ambiguous `else'.

	* macfns.c (x_to_mac_color): Remove unused variable `tail'.
	(x_set_mouse_color): Remove unused variable `dpy'.
	(Fx_create_frame): Remove unused variable `x_frame_count'.
	(Fx_server_version): Add explicit braces to avoid ambiguous `else'.
	(x_sync): Move from macterm.c.
	(Fx_file_dialog): Remove unused variable `default_filter_index'.

	* macmenu.c (min_menu_id): Make element type explicit.

	* macselect.c (get_flavor_type_from_symbol): Remove unused
	variable `val'.
	(get_scrap_private_timestamp, x_get_foreign_selection)
	(copy_scrap_flavor_data): Add explicit braces to avoid ambiguous `else'.
	(Fmac_process_deferred_apple_events): Remove unused variables