@@ -1,3 +1,8 @@
+2006-04-12  Richard Stallman  <rms@gnu.org>
+
+	* process.c (conv_lisp_to_sockaddr): If FAMILY unknown, just return.
+	(Fprocess_send_eof): Abort if fail to open null device.
+
 2006-04-12  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
 
 	* fns.c [HAVE_MENUS && MAC_OS]: Include macterm.h.
